# publish3-backend

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20251206232600_create_users_table.up.sql  20251206232639_create_publications_table.down.sql  20251206232639_create_publications_table.up.sql  20251206232722_create_users_table.up.sql  20251206232730_create_wallets_table.up.sql  20251206232752_create_authors_table.down.sql  20251206232752_create_authors_table.up.sql  20251206232753_create_user_wallets_table.down.sql  20251206232753_create_user_wallets_table.up.sql  20251206232823_create_citations_table.down.sql  20251206232823_create_citations_table.up.sql  20251206232854_add_user_id_to_publications.down.sql  20251206232854_add_user_id_to_publications.up.sql  20251216125430_add_blockchain_fields.down.sql  20251216125430_add_blockchain_fields.up.sql  20251217152257_make_publication_fields_not_null.up.sql  20251218125038_add_wallet_address_to_authors.down.sql  20251218125038_add_wallet_address_to_authors.up.sql
src/: config.rs  main.rs
src/api/: mod.rs
src/api/authors/: mod.rs
src/api/citations/: mod.rs  tests.rs
src/api/publication_authors/: mod.rs
src/api/publications/: mod.rs  tests.rs
src/api/tests/: mod.rs
src/api/users/: mod.rs
src/auth/: mod.rs  privy.rs
src/blockchain/: errors.rs  mod.rs  signing.rs
src/common/: mod.rs  zresult.rs
src/db/: mod.rs
src/db/s3/: client.rs  mod.rs
src/db/sql/: authors.rs  citations.rs  mod.rs  models.rs  publication_authors.rs  publications.rs  users.rs  wallets.rs
src/db/sql/tests/: mod.rs
