[package]
name = "publish3-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
argon2 = "0.5.0"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
aptos-crypto-derive = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
base64 = "0.22.1"
bcs = "0.1.6"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand_core = { version = "0.9.3", features = ["std"] }
redis = { version = "1.0.0", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
] }
deadpool-redis = { version = "0.22.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "json",
    "uuid",
    "migrate",
] }
tracing = { version = "0.1.41", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
thiserror = "2.0.12"
aws-config = "1.8.1"
aws-sdk-s3 = { version = "1.96.0", features = ["behavior-version-latest"] }
aws-smithy-client = "0.60.3"
aws-smithy-runtime = "1.8.3"
actix-multipart = "0.7.2"
md5 = "0.8.0"
async-trait = "0.1.89"
tempfile = "3.21.0"
tokio = { version = "1.0", features = ["full"] }
actix-files = "0.6.7"
bytes = "1.10.1"
aws-smithy-types = { version = "1.3.4" }
lazy_static = "1.5.0"
indexmap = "2.11.4"
privy-rs = "0.1.0-alpha.4"
url = "2.5.7"
digest = "0.10.7"
sha3 = "0.10.8"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }

[dev-dependencies]
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "json",
    "uuid",
    "migrate",
] }
